--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="app">
         <h1>🐇 To do list 🐇</h1>
-        <input type="text" class="todo-input" placeholder="Write something todo">
+        <input type="text" class="todo-input" placeholder="Write something to do">
         <div class="todos">
             <div class="uncompleted-todos">
                 <div class="todo-item">
@@ -22,29 +22,12 @@
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                             <path d="M18 6l-12 12"></path>
                             <path d="M6 6l12 12"></path>
-                         </svg>
-                     </a>
-<<<<<<< HEAD
-                     </div>
-=======
-                    </div>
->>>>>>> b546c74 (version 1)
-                    <div class="todo-item">
-                        <span>
-                            <input type="checkbox"> Drink water
-                        </span>
-                        <a href="#">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-x" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                                <path d="M18 6l-12 12"></path>
-                                <path d="M6 6l12 12"></path>
-                             </svg>
-                         </a>
-                        </div>
+                        </svg>
+                    </a>
                 </div>
+            </div>
             <div class="completed-todos">
                 <div class="completed-title">Completed (1/3)</div>
-           
                 <div class="todo-item">
                     <span>
                         <input type="checkbox"> Drink water
@@ -54,14 +37,12 @@
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                             <path d="M18 6l-12 12"></path>
                             <path d="M6 6l12 12"></path>
-                         </svg>
-                     </a>
-                    </div>
+                        </svg>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
-    <script src="todo.js">
-
-    </script>
+    <script src="todo.js"></script>
 </body>
 </html>
