--- a/index.html
+++ b/index.html
@@ -24,3 +24,22 @@
     <script src="todo.js"></script>
 </body>
 </html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Timer App</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="timer-container">
+        <button id="timerButton" onclick="toggleTimer()">Start Timer</button>
+        <button id="restartButton" onclick="restartTimer()" style="display: none;">Restart Timer</button>
+        <div id="timerDisplay">00:00:00</div>
+    </div>
+    <script src="timer.js"></script>
+</body>
+</html>
